--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,5 @@
 <div style='border: dashed red;'>
   <img src='https://i.imgur.com/jFaSxym.png'>
 </div>
+
+<h1>My name is <%= ["Misty", "Almond", "Amigo"].sample %></h1>
