--- a/views/index.erb
+++ b/views/index.erb
@@ -2,4 +2,4 @@
   <img src='https://i.imgur.com/jFaSxym.png'>
 </div>
 
-<h1>My name is <%= ["Misty", "Almond", "Amigo"].sample %></h1>
+<h1>My name is <%= @random_cat_name %> </h1>
